--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <div class="event-categories">
                             <div class="event-option" data-category="private_corporate">Private & Corporate</div>
                             <div class="event-option" data-category="conferences">Conferences</div>
-                            <div class="event-option" data-category="gala">Gala Dinners</div>
+                            <div class="event-option" data-category="gala">Gala Dinners and Balls</div>
                             <div class="event-option" data-category="weddings">Weddings</div>
                         </div>
                     </div>
