--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             transition: all 0.2s ease;
             font-size: 13px;
             font-weight: 500;
+            white-space: normal;  
+            line-height: 1.4;
         }
         
         .event-option.selected { background: #1a1a1a; color: #ffffff; border-color: #1a1a1a; }
